# EduWorksheets

./: .replit  Pasted-ERROR-app-Exception-on-create-worksheet-GET-Traceback-most-recent-call-last-File-home-runn-1729348693013.txt  ai_question_generator.py  app.py  auth.py  check_and_add_templates.py  check_db_connection.py  lms_integration.py  models.py  pdf_generator.py  pyproject.toml  worksheet_generator.py
migrations/versions/: 1b7c0981b172_update_worksheet_model_with_new_.py  6ef994c70c9c_add_lti_user_id_to_user_model.py  98a04d5cfb55_add_lti_user_id_to_user_model.py  c6ac484d97e4_add_file_upload_fields_to_worksheet_.py  c93a748999ff_add_is_shared_and_shared_with_columns_.py
static/css/: custom.css
static/js/: main.js  worksheet_editor.js
templates/: base.html  create_worksheet.html  dashboard.html  index.html  login.html  preview_worksheet.html  register.html  share_worksheet.html
